[package]
name = "textboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = ["default", "default_fonts", "glow", "persistence"] }
log = "0.4.20"
serde = { version = "1", features = ["derive"] }
tungstenite = "0.24.0"
tokio-tungstenite = "0.24.0"
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
serde_json = "1.0.113"
directories = "5.0.1"
copypasta = "0.10.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[patch.crates-io]
